[FIX] Landing Responsive and Overflow

--- a/AppFinancieraFront/src/app.css
+++ b/AppFinancieraFront/src/app.css
@@ -14,3 +14,12 @@ h1, h2, h3, h4, h5 ,h6{
 div, p{
   font-family: 'Roboto', sans-serif;
 }
+
+.center {
+  align-items: center;
+  justify-content: center;
+}
+
+.fontbolder {
+  font-weight: 900;
+}
