--- a/AppFinancieraFront/src/components/UIComponents/Card/index.module.css
+++ b/AppFinancieraFront/src/components/UIComponents/Card/index.module.css
@@ -11,5 +11,11 @@ a:hover {
   }
 
   .borderCard{
+      border: 1px black solid;
       
+  }
+
+  img {
+      margin-top: 5px;
+      margin-bottom:5px;
   }
